# math_content_generator_agent

./: .env.example  .gitignore  .python-version  API_KEY_SETUP.md  BACKEND_FIX_COMPLETE.md  GEMINI.md  GeometricPrompt.yaml  LANGSMITH_SETUP.md  LESSON_IMPLEMENTATION_SUMMARY.md  MIGRATION_COMPLETE.md  README.md  WORKFLOW_FIX_COMPLETE.md  backend.py  check_db_structure.py  check_versions.py  domain_models.py  error.md  example_output.json  frontend.py  frontend_backup.py  get_subtopic_examples.py  graph.py  insert_lesson_config_temp.py  langgraph.json  main.py  migrate_prompts_to_hub.py  models.py  pyproject.toml  quick_test.py  requirements.txt  subjects_config.py  test_graph.py  test_prompt_refinement.py  test_supabase_connection.py  update_models_temp.py  update_workflow_temp.py  verify_backend_fix.py  verify_fill_in_blank.py  verify_migration.py  workflow.py
.langgraph_api/: .langgraph_checkpoint.1.pckl  .langgraph_checkpoint.2.pckl  .langgraph_checkpoint.3.pckl  .langgraph_ops.pckl  .langgraph_retry_counter.pckl
AutoGenerators/: ARCHITECTURE.md  FRONTEND_COMPARISON.md  IMPLEMENTATION_SUMMARY.md  QUICKSTART.md  README.md  __init__.py  auto_level_generator.py  run_auto_generator.py  test_auto_generator.py
DataExtractors/: IMPLEMENTATION_SUMMARY.md  IXLAlgebra1.py  IXL_SUPABASE_README.md  QUICKSTART_IXL_SUPABASE.md  analyze_screenshot.py  ixl_content_scraper.py  ixl_links_mapping.py  ixl_scraper_manager.py  ixl_to_supabase_manager.py  run_ixl_processor.py  test_ixl_supabase_integration.py
Supabase/: SUPABASE_GUIDE.md  TESTING_README.md  check_schema.py  subtopics_service.py  supabase_integration.py  supabase_service.py  test_database_fixes.py  test_supabase.py
Supbase/: supabase_integration.py  supabase_service.py
doc/: INTEGRATION_GUIDE.md  LANGGRAPH_STUDIO_GUIDE.md  (+5 more)
(+23 files in other folders)
