[project]
name = "math-content-generator-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "firecrawl>=4.5.0",
    "langchain-core>=1.0.1",
    "langchain-google-genai>=3.0.0",
    "langgraph>=1.0.1",
    "langsmith>=0.4.38",
    "streamlit>=1.50.0",
    "supabase>=2.22.2",
]
