[project]
name = "math-content-generator-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "firecrawl>=4.5.0",
    "langchain-core>=1.0.1",
    "langchain-google-genai>=3.0.0",
    "langgraph>=1.0.1",
    "langsmith>=0.4.38",
    "streamlit>=1.50.0",
    "supabase>=2.22.2",
    "langchain>=1.0.0",
    "pydantic>=2.7.0,<3.0.0",
    "pydantic-core>=2.18.0,<3.0.0",
    "typing-extensions",
    "typing-inspection",
    "google-ai-generativelanguage",
    "google-api-core",
    "googleapis-common-protos",
    "protobuf",
    "grpcio",
    "requests",
    "urllib3",
    "idna",
    "certifi",
    "google-auth",
    "pyasn1",
    "pyasn1-modules",
    "rsa",
    "cachetools",
    "proto-plus",
    "filetype",
    "annotated-types",
    "requests-toolbelt",
    "httpx",
    "zstandard",
    "blinker>=1.9.0",
    "langchainhub>=0.1.21",
    "langgraph-cli[inmem]>=0.4.7",
]
